Bug 32276 - [fsrtpconference][PATH] Fix MSVC compilation
Summary: [fsrtpconference][PATH] Fix MSVC compilation
Status: RESOLVED FIXED
Alias: None
Product: Farstream
Classification: Unclassified
Component: RTP Plugin (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Olivier Crête
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-09 13:58 UTC by Andoni Morales Alastruey
Modified: 2010-12-20 03:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Replace legacy index() with strchr (1.05 KB, patch)
2010-12-09 13:59 UTC, Andoni Morales Alastruey
Details | Splinter Review
Use portable g_snprintf instead of snprintf (1.02 KB, patch)
2010-12-09 13:59 UTC, Andoni Morales Alastruey
Details | Splinter Review

Description Andoni Morales Alastruey 2010-12-09 13:58:22 UTC
Attached two patches to fix compilation with MSVC
Comment 1 Andoni Morales Alastruey 2010-12-09 13:59:04 UTC
Created attachment 40962 [details] [review]
Replace legacy index() with strchr
Comment 2 Andoni Morales Alastruey 2010-12-09 13:59:45 UTC
Created attachment 40963 [details] [review]
Use portable g_snprintf instead of snprintf
Comment 3 Olivier Crête 2010-12-20 03:10:37 UTC
thanks, committed:

commit 2c56d479b9f5bc29ffdbb119e1f6e7c70840dfda
Author: Andoni Morales Alastruey <ylatuya@gmail.com>
Date:   Thu Dec 9 22:33:41 2010 +0100

    Use portable 'g_snprintf' instead of 'snprintf'
    
    https://bugs.freedesktop.org/show_bug.cgi?id=32276

commit e9ecb91ed9589716883eb3aa05d1eb5ff0f2342d
Author: Andoni Morales Alastruey <ylatuya@gmail.com>
Date:   Thu Dec 9 22:54:07 2010 +0100

    Replace legacy index() with strchr() and avoid calculating the index twice
    
    https://bugs.freedesktop.org/show_bug.cgi?id=32276


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.