Use portable 'g_snprintf' instead of 'snprintf'

https://bugs.freedesktop.org/show_bug.cgi?id=32276